@@ -4,6 +4,7 @@
 \B\.svn\b
 \B\.git\b
 \B\.gitignore\b
+\B\.hg\b
 
 # Avoid Makemaker generated and utility files.
 \bMANIFEST\.bak
