@@ -11,11 +11,11 @@ use Carp;
 
 =head1 VERSION
 
-Version 1.3
+Version 1.4
 
 =cut
 
-our $VERSION = '1.3';
+our $VERSION = '1.4';
 
 my %typeregistry = (
     default => {},
@@ -375,16 +375,18 @@ sub process_type {
 
     # Array handling as we'd get this usually from DBD::Pg or equivalent
     if (ref $val eq ref []){
-       $type =~ s/(\[|\])*$//;
+       # strangely, DBD::Pg returns, as of 2.x, the types of array types 
+       # as prefixed with an underscore.  So we have to remove this. --CT
+       $type =~ s/^\_//;
        my $newval = [];
-       push @$newval, process_type($_, $type) for @$val;
+       push @$newval, process_type($_, $type, $registry) for @$val;
        return $newval;
     }
 
     # Otherwise:
     if (defined $registry->{$type}){
        my $class = $registry->{$type};
-       $val = "$class"->from_db($val);
+       $val = $class->from_db($val);
     }
     return $val;
 }
